--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,10 @@
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "laravelcollective/html": "~5.0",
         "nesbot/carbon": "^1.22",
         "vinkla/hashids": "^3.3",
-        "laravelcollective/html": "~5.0"
+        "yajra/laravel-datatables-oracle": "~8.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
